input[type=range]: if min > max use min as default value.

This patch ensures that if the maximum attr of an <input type="range">
is less than the minimum attr, the minimum attr value is used as the
default value.

This is according to the specification in [1]. This patch fixes the 14th
test in [2].

[1] - https://html.spec.whatwg.org/multipage/forms.html#concept-input-value-default-range
[2] - http://w3c-test.org/html/semantics/forms/the-input-element/range.html

BUG=699419

Review-Url: https://codereview.chromium.org/2742243002
Cr-Commit-Position: refs/heads/master@{#456327}

Former-commit-id: d9f7bd34b3431faf6ce077fc1d85b2335a722931